--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,9 @@ certifi==2022.12.7
 cffi==1.15.1
 click==8.1.3
 cryptography==39.0.2
+dnspython==2.3.0
+ecdsa==0.18.0
+email-validator==1.3.1
 exceptiongroup==1.1.1
 fastapi==0.95.0
 greenlet==2.0.2
@@ -13,15 +16,20 @@ httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
 iniconfig==2.0.0
+jose==1.0.0
 packaging==23.0
 passlib==1.7.4
 pluggy==1.0.0
 psycopg2-binary==2.9.5
+pyasn1==0.4.8
 pycparser==2.21
 pycrypto==2.6.1
 pydantic==1.10.6
 pytest==7.2.2
+python-jose==3.3.0
 rfc3986==1.5.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.7
 starlette==0.26.1
