--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,39 +1,74 @@
+aiohttp==3.8.4
+aioredis==2.0.1
+aiosignal==1.3.1
 anyio==3.6.2
+async-timeout==4.0.2
 attrs==22.2.0
 bcrypt==4.0.1
+cachetools==5.3.1
 certifi==2022.12.7
 cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
 cryptography==39.0.2
+cssselect==1.2.0
+cssutils==2.7.1
+distro==1.8.0
 dnspython==2.3.0
+docker==6.1.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
 ecdsa==0.18.0
 email-validator==1.3.1
 exceptiongroup==1.1.1
 fastapi==0.95.0
+fastapi-limiter==0.1.5
+frozenlist==1.3.3
+geoip2==4.7.0
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
 iniconfig==2.0.0
+ipapi==1.0.4
 jose==1.0.0
+jsonschema==3.2.0
+lxml==4.9.2
+maxminddb==2.3.0
+multidict==6.0.4
 packaging==23.0
+paramiko==3.2.0
 passlib==1.7.4
 pluggy==1.0.0
+premailer==3.10.0
 psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pycparser==2.21
 pycrypto==2.6.1
 pydantic==1.10.6
+PyNaCl==1.5.0
+pyotp==2.8.0
+pyrsistent==0.19.3
 pytest==7.2.2
+python-dotenv==0.21.1
 python-jose==3.3.0
+python-multipart==0.0.6
+PyYAML==5.4.1
+redis==4.5.5
+requests==2.31.0
 rfc3986==1.5.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.7
 starlette==0.26.1
+texttable==1.6.7
 tomli==2.0.1
-typing-extensions==4.5.0
+typing_extensions==4.5.0
+urllib3==2.0.3
 uvicorn==0.21.1
-gunicorn
+websocket-client==0.59.0
+yagmail==0.15.293
+yarl==1.9.2
