FastAPI successfully deployed on Kubernetes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,3 +5,7 @@ WORKDIR /app
 COPY . /app
 
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
+
+ENV BACKEND_VARIABLE='passmaster-backend'
+
+CMD uvicorn main:app --port=8000 --host=0.0.0.0
