--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -2,7 +2,6 @@ version: "3.9"
 services:
   db:
     image: postgres:14.8
-    restart: always
     command: postgres -c 'max_connections=200'
     environment:
       - "POSTGRES_USER=postgres"
@@ -12,7 +11,9 @@ services:
       - "5432:5432"
   web:
     build: .
-    command: sh -c "uvicorn main:app --reload --port=8000 --host=0.0.0.0"
+    command: sh -c "uvicorn main:app --port=8000 --host=0.0.0.0"
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     volumes:
