--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.10.6
 
 WORKDIR /app
 
+COPY . /app
+
 COPY requirements.txt ./
 
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
