--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@react-three/drei": "^9.74.11",
-    "@react-three/fiber": "^8.13.2",
+    "@react-three/drei": "^9.56.16",
+    "@react-three/fiber": "^8.13.3",
     "axios": "^1.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
     "sort-by": "^1.2.0",
