--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,17 +14,17 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@react-three/drei": "^9.56.16",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@react-three/drei": "^9.76.0",
     "@react-three/fiber": "^8.13.3",
     "axios": "^1.4.0",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax": "^3.5.1",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
+    "styled-components": "^5.3.11",
     "sort-by": "^1.2.0",
     "three": "^0.153.0"
   },
