--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@react-three/drei": "^9.76.0",
@@ -24,8 +25,8 @@
     "react-parallax": "^3.5.1",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
-    "styled-components": "^5.3.11",
     "sort-by": "^1.2.0",
+    "styled-components": "^5.3.11",
     "three": "^0.153.0"
   },
   "devDependencies": {
