--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "^8.13.3",
     "@types/material-ui": "^0.21.12",
     "axios": "^1.4.0",
+    "localforage": "^1.10.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
