add ingress + temporary localhost until domain gets validated

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,8 @@ COPY requirements.txt ./
 
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
+ENV REDIS_URL=redis://passmaster-redis:6379/0
+
 ENV BACKEND_VARIABLE='passmaster-backend'
 
 CMD uvicorn main:app --port=8000 --host=0.0.0.0
