--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-parallax": "^3.5.1",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
